# knowledge-graph-platform

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SESSIONS.md  docker-compose.local.yml  docker-compose.yml
demo/: README.md
demo/documents/: inventory-ledger.txt  maintenance-records.txt  monthly-report.txt
demo/ontology/: spare-parts-ontology.yaml
frontend/: CLAUDE.md  Dockerfile.local  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: chat.ts  client.ts  documents.ts  graph.ts  ontology.ts
frontend/src/components/EvidenceCard/: EvidencePanel.tsx
frontend/src/stores/: chatStore.ts  graphStore.ts  ontologyStore.ts
frontend/src/types/: chat.ts  document.ts  graph.ts  ontology.ts
proto/: graphiti-service-openapi.yaml
scripts/: seed-ontology.py  test-e2e.sh
services/backend/: CLAUDE.md  Dockerfile  go.mod  go.sum
services/backend/migrations/: 001_initial.sql
services/graphiti-server/: CLAUDE.md  Dockerfile  pyproject.toml
services/graphiti-server/graphiti_patch/: openai_generic_client.py
services/graphiti-server/src/: config.py  exceptions.py  main.py  server.py  worker.py
services/graphiti-server/src/models/: requests.py  responses.py
services/graphiti-server/src/services/: extraction.py  graph.py  ingestion.py  ontology.py  owl_parser.py  search.py
services/graphiti-server/tests/: conftest.py
test-data/: spare-parts-inventory.txt  spare-parts-maintenance.txt  spare-parts-test.txt  test-doc.txt
(+32 files in other folders)
